--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ div {
   padding: .4em .75em .3em;
   text-align: center;
   border-radius: 8px;
-  border: 3px solid;
+  border: 3px solid #333;
   display: inline-block;
   font-size: 1.125rem;
 }
